# datasette-open-data

./: .gitignore  NOTES.md  README.md  metadata.yml  providers.yml  pyproject.toml
datasette_open_data/: __init__.py  agent_tools.py  cli.py  loader.py  models.py  registry.py  views.py
datasette_open_data/providers/: base.py  ckan.py
datasette_open_data/templates/: base.html  open_data_dataset.html  open_data_index.html  open_data_preview.html  open_data_search.html
examples/: metadata.yml
scripts/: build_catalog.py  create_db.py  dev.py
static/: custom.css
tests/: test_ckan_provider.py
