[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datasette-open-data"
version = "0.1.0"
description = "Datasette plugin for searching and loading open data portal resources, starting with CKAN."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Cathal Byrne"}]
dependencies = [
  "datasette>=0.64",
  "httpx>=0.27",
  "sqlite-utils>=3.36",
]

[project.urls]
Homepage = "https://github.com/cathal470/datasette-open-data"

[project.entry-points.datasette]
open_data = "datasette_open_data"

[project.scripts]
open-data-load = "datasette_open_data.cli:main"

[tool.setuptools.packages.find]
include = ["datasette_open_data*"]

[tool.setuptools.package-data]
datasette_open_data = ["templates/*.html"]
